2007-03-02  Martin Leidig  <mleidig@schlund.de>

	Extended support for JSON Bean serialization/deserialization customization.
	The annotation @Alias can be used to override the property names used within 
	JSON. Public bean properties without getter/setter methods are detected/handled 
	now too. Beans now can be customized using XML (for those who don't like annotations 
	or who want to override them). The XML file has to be called beanmetadata.xml
	and can either be placed in the project's conf directory or within
	a jar file's META-INF directory.

	* src/de/schlund/pfixcore/webservice/jsonws/serializers/BeanSerializer.java
	* src/de/schlund/pfixcore/webservice/jsonws/JSONWSProcessor.java
	* src/de/schlund/pfixcore/webservice/jsonws/deserializers/BeanDeserializer.java
	* src/de/schlund/pfixcore/webservice/WebServiceServlet.java
	* src/de/schlund/pfixcore/webservice/beans/IntrospectionException.java
	* src/de/schlund/pfixcore/webservice/beans/metadata
	* src/de/schlund/pfixcore/webservice/beans/metadata/DOMInitException.java
	* src/de/schlund/pfixcore/webservice/beans/metadata/DOMInit.java
	* src/de/schlund/pfixcore/webservice/beans/metadata/Locator.java
	* src/de/schlund/pfixcore/webservice/beans/metadata/Property.java
	* src/de/schlund/pfixcore/webservice/beans/metadata/Bean.java
	* src/de/schlund/pfixcore/webservice/beans/metadata/Beans.java
	* src/de/schlund/pfixcore/webservice/beans/metadata/DefaultLocator.java
	* src/de/schlund/pfixcore/webservice/beans/InitException.java
	* src/de/schlund/pfixcore/webservice/beans/Include.java
	* src/de/schlund/pfixcore/webservice/beans/BeanDescriptor.java
	* src/de/schlund/pfixcore/webservice/beans/Exclude.java
	* src/de/schlund/pfixcore/webservice/beans/ExcludeByDefault.java
	* src/de/schlund/pfixcore/webservice/beans/Alias.java
	* src/de/schlund/pfixcore/webservice/beans/BeanDescriptorFactory.java
	* src/de/schlund/pfixcore/webservice/config/GlobalServiceConfig.java